--- a/admin/index.html
+++ b/admin/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <div style="display: flex; height: 100vh; align-items: center; justify-content: center;">
+      <img style="width: 55px;" src="./src/assets/page-loading.gif" alt="">
+    </div>
+  </div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
